fix post header text align

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -213,6 +213,7 @@
       left: 10px;
       width: 100%;
       line-height: 1;
+      text-align: left;
 
       > span {
         color: white;
